[S] Fix dialog checkbox alignment

--- a/src/pages/overall/overall.scss
+++ b/src/pages/overall/overall.scss
@@ -51,3 +51,10 @@
     margin-right: 20px;
     min-width: 170px;
 }
+
+.dialog-checkbox
+{
+    display: block;
+    margin-top: 20px;
+    margin-bottom: -20px;
+}
